# lmhg-dashboard

./: Makefile  README.md  docker-compose.yml
.github/workflows/: frontend-prod.yml
backend/: .env  .env.example  .env.prod.example  .env.test.example  Dockerfile  README.md  alembic.ini  manage_migrations.sh  pyproject.toml  requirements.txt  run_migrations.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/hydra/: register_client.py
backend/lmhg/: auth.py  consent.py  main.py  models.py
docs/: backup_policy.md  dev-setup.md  security-checklist.md
frontend/: Dockerfile  Dockerfile.prod  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _error.js  index.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/pages/: index.js
frontend/.next/static/webpack/: webpack.b9bf84b512895451.hot-update.js
frontend/components/: Button.tsx
frontend/pages/: index.tsx  login.tsx
hydra/: hydra.yml
kratos/: kratos.yml
nginx/: nginx.conf
openspec/: project.md
scripts/: backup_postgres.sh  generate-self-signed.sh  generate_secrets.sh  hydra_init.sh  restore_postgres.sh
