[tool.poetry]
name = "lmhg-backend"
version = "0.1.0"
description = "LMHG FastAPI backend (minimal scaffold)"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
psycopg[binary] = "^3.2.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
